# Maxwell

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  LICENSE  LICENSE.txt  README.md  conf.py
.github/workflows/: github-actions.yml
Maxwell/: CMakeLists.txt  Dimension.hpp  Maxwell.hh  Maxwell.hpp  Quantity.hpp  QuantityMath.hpp  QuantityRepo.hpp  Unit.hpp  UnitRepo.hpp  test  test.cpp
Maxwell/Quantity/: CMakeLists.txt  Constants.hh  QuantityBase.hh  QuantityConcepts.hh  QuantityLiterals.hh  QuantityMath.hh  QuantityTypes.hh
Maxwell/Units/: CMakeLists.txt  UnitBase.hh  UnitTypes.hh
Maxwell/detail/: Dimension.hpp  Quantity.hpp  QuantityInstantiations.cpp  QuantityInstantiations.hpp  QuantityMath.hpp  QuantityRepo.hpp  Unit.hpp  UnitRepo.hpp
Maxwell/include/: BaseUnitScales.hpp  FundamentalConstants.hpp  Quantity.hpp  QuantityCore.hpp  QuantityLiterals.hpp  QuantityMath.hpp  QuantityTypes.hpp  Unit.hpp  UnitCore.hpp  UnitTypes.hpp
Tests/: CMakeLists.txt  TestQuantity.cpp  TestQuantity.hpp  TestUnitRepo.cpp  TestUnits.cpp  UDArithmeticTypes.hpp  foo.cpp
cmake/: AddSphinxDocument.cmake  FindSphinx.cmake  MaxwellConfig.cmake.in
doc/: Doxyfile  index.rst
docs/: conf.py  index.rst  installation.rst  predefined_units.rst  requirements.txt  technical_details.rst  users_guide.rst
examples/: CMakeLists.txt  currency.cpp  eigen_example.cpp  normal_shock.cpp  normal_shock_modules.cpp  pendulum.cpp  rotation_matrix.cpp  shapes.cpp  shock_calculator.cpp
include/: CMakeLists.txt  Maxwell.cppm  Maxwell.hpp  Maxwell_Core.hpp  Quantity.hpp  QuantityRepo.hpp  Unit.hpp  UnitRepo.hpp
include/Maxwell/: Quantity.hpp  QuantityMath.hpp  QuantityRepo.hpp  Unit.hpp  UnitRepo.hpp
include/Maxwell/internal/: Concepts.hpp  Config.hpp  Measure.hpp
include/core/: CMakeLists.txt  dimension.hpp  quantity.hpp  quantity_holder.hpp  quantity_system.hpp  quantity_value.hpp  scale.hpp  unit.hpp
include/core/impl/: quantity_holder_declaration.hpp  quantity_holder_impl.hpp  quantity_value_declaration.hpp  quantity_value_holder_fwd.hpp  quantity_value_impl.hpp
include/formatting/: CMakeLists.txt  formatting.hpp
include/internal/: Concepts.hpp  Measure.hpp  config.hpp  constants.hpp  dimension.hpp  quantity.hpp  quantity_math.hpp  quantity_repo.hpp  quantity_vector.hpp  unit.hpp  unit_repo.hpp  utility.hpp
include/math/: CMakeLists.txt  quantity_limits.hpp  quantity_value_math.hpp
include/quantities/: CMakeLists.txt  dimension.hpp  quantity.hpp  quantity_holder.hpp  quantity_system.hpp  quantity_value.hpp  unit.hpp
include/quantity_systems/: CMakeLists.txt  isq.hpp  other.hpp  si.hpp  si_constants.hpp  us.hpp
include/utility/: CMakeLists.txt  compile_time_math.hpp  config.hpp  template_string.hpp  type_traits.hpp
src/: Maxwell.hpp  composite_quantity.hpp  core.hpp  dimensional_product.hpp  formatting.hpp  isq_quantities.hpp  isq_units.hpp  kind.hpp  quantity.hpp  unit.hpp  unit_system.hpp  utility.hpp
tests/: CMakeLists.txt  clang-tidy-check.cpp  compile_check.cpp  foo.cpp  test_compilation_failure.cpp  test_compile_time_math.cpp  test_dimension.cpp  test_dimensional_product.cpp  test_doc_examples.cpp  test_isq.cpp  test_quantity.cpp  test_quantity.hpp  test_quantity_holder.cpp  test_quantity_math.cpp  test_quantity_value.cpp  test_si_units.cpp  test_template_string.cpp  test_types.hpp  test_unit.cpp  test_units.cpp  test_utilities.cpp
unit-tests/: CMakeLists.txt  TestMeasure.cpp  TestQuantity.cpp  TestTypes.hpp  TestUnit.cpp
