find_package(GTest REQUIRED)
include(CTest)

function(make_compilation_failure_test test_executable_name test_name)
    add_executable(${test_executable_name} test_compilation_failure.cpp)
    set_target_properties(${test_executable_name} PROPERTIES EXCLUDE_FROM_ALL TRUE EXCLUDE_FROM_DEFAULT_BUILT TRUE)
    target_compile_definitions(${test_executable_name} PRIVATE ${test_name})
    target_link_libraries(${test_executable_name} PRIVATE Maxwell)
    add_test(
        NAME ${test_name} 
        COMMAND ${CMAKE_COMMAND} --build . --target ${test_executable_name} --config $<CONFIGURATION>
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
    set_tests_properties(${test_name} PROPERTIES WILL_FAIL TRUE)
endfunction()

add_executable(test_template_string test_template_string.cpp)
add_test(NAME TestTemplateString COMMAND test_template_string)
target_link_libraries(test_template_string PRIVATE Maxwell GTest::gtest_main)
gtest_discover_tests(test_template_string)

add_executable(test_compile_time_math test_compile_time_math.cpp)
add_test(NAME TestCompileTimeMath COMMAND test_compile_time_math)
target_link_libraries(test_compile_time_math PRIVATE Maxwell GTest::gtest_main)
gtest_discover_tests(test_compile_time_math)

add_executable(test_dimension test_dimension.cpp)
add_test(NAME TestDimension COMMAND test_dimension)
target_link_libraries(test_dimension PRIVATE Maxwell GTest::gtest_main)
gtest_discover_tests(test_dimension)

add_executable(test_quantity_value test_quantity_value.cpp) 
add_test(NAME TestQuantityValue COMMAND test_quantity_value)
target_link_libraries(test_quantity_value PRIVATE Maxwell GTest::gtest_main)
target_compile_options(test_quantity_value PRIVATE -Wno-deprecated-declarations)
gtest_discover_tests(test_quantity_value)

add_executable(test_quantity_holder test_quantity_holder.cpp)
add_test(NAME TestQuantityHolder COMMAND test_quantity_holder)
target_link_libraries(test_quantity_holder PRIVATE Maxwell GTest::gtest_main)
target_compile_options(test_quantity_holder PRIVATE -Wno-deprecated-declarations)
gtest_discover_tests(test_quantity_holder)

add_executable(test_quantity test_quantity.cpp)
add_test(NAME TestQuantity COMMAND test_quantity)
target_link_libraries(test_quantity PRIVATE Maxwell GTest::gtest_main)
target_compile_options(test_quantity PRIVATE -Wno-deprecated-declarations)
gtest_discover_tests(test_quantity)

add_executable(test_units test_units.cpp)
add_test(NAME TestUnits COMMAND test_units)
target_link_libraries(test_units PRIVATE Maxwell GTest::gtest_main)
target_compile_options(test_units PRIVATE -Wno-deprecated-declarations)
gtest_discover_tests(test_units)

add_executable(test_isq test_isq.cpp)
add_test(NAME TestISQ COMMAND test_isq)
target_link_libraries(test_isq PRIVATE Maxwell GTest::gtest_main)
gtest_discover_tests(test_isq)

add_executable(test_si_units test_si_units.cpp)
add_test(NAME TestSIUnits COMMAND test_si_units)
target_link_libraries(test_si_units PRIVATE Maxwell GTest::gtest_main)
gtest_discover_tests(test_si_units)

add_executable(test_quantity_math test_quantity_math.cpp)
add_test(NAME TestQuantityMath COMMAND test_quantity_math)
target_link_libraries(test_quantity_math PRIVATE Maxwell GTest::gtest_main) 
gtest_discover_tests(test_quantity_math)

add_executable(test_doc_examples test_doc_examples.cpp)
add_test(NAME TestDocExamples COMMAND test_doc_examples)
target_link_libraries(test_doc_examples PRIVATE Maxwell GTest::gtest_main)
gtest_discover_tests(test_doc_examples)

make_compilation_failure_test(test_invalid_quantity_value_constructor_1 TEST_INVALID_QUANTITY_VALUE_CONSTRUCTOR_1)
make_compilation_failure_test(test_invalid_quantity_value_constructor_2 TEST_INVALID_QUANTITY_VALUE_CONSTRUCTOR_2)
make_compilation_failure_test(test_invalid_quantity_value_constructor_3 TEST_INVALID_QUANTITY_VALUE_CONSTRUCTOR_3)
make_compilation_failure_test(test_invalid_quantity_value_chrono_constructor TEST_INVALID_QUANTITY_VALUE_CHRONO_CONSTRUCTOR)

make_compilation_failure_test(test_invalid_quantity_value_conversion1 TEST_INVALID_QUANTITY_VALUE_CONVERSION_1)
make_compilation_failure_test(test_invalid_quantity_value_conversion2 TEST_INVALID_QUANTITY_VALUE_CONVERSION_2)
make_compilation_failure_test(test_invalid_quantity_value_conversion3 TEST_INVALID_QUANTITY_VALUE_CONVERSION_3)
make_compilation_failure_test(test_invalid_quantity_value_conversion4 TEST_INVALID_QUANTITY_VALUE_CONVERSION_4)
make_compilation_failure_test(test_invalid_quantity_value_conversion5 TEST_INVALID_QUANTITY_VALUE_CONVERSION_5)
make_compilation_failure_test(test_invalid_quantity_value_conversion6 TEST_INVALID_QUANTITY_VALUE_CONVERSION_6)

make_compilation_failure_test(test_invalid_quantity_value_quantity_holder1 TEST_INVALID_QUANTITY_VALUE_QUANTITY_HOLDER_1)
make_compilation_failure_test(test_invalid_quantity_value_quantity_holder2 TEST_INVALID_QUANTITY_VALUE_QUANTITY_HOLDER_2)
make_compilation_failure_test(test_invalid_quantity_value_quantity_holder3 TEST_INVALID_QUANTIY_VALUE_QUANTITY_HOLDER_3)
make_compilation_failure_test(test_invalid_quantity_value_quantity_holder4 TEST_INVALID_QUANTITY_VALUE_QUANTITY_HOLDER_4)

make_compilation_failure_test(test_invalid_quantity_value_conversion_operator1 TEST_INVALID_QUANTITY_VALUE_CONVERSION_OPERATOR_1)
make_compilation_failure_test(test_invalid_quantity_value_conversion_operator2 TEST_INVALID_QUANTITY_VALUE_CONVERSION_OPERATOR_2)

make_compilation_failure_test(test_invalid_quantity_value_in1 TEST_INVALID_QUANTITY_VALUE_IN_1)